<resources>
    <string name="app_name">Book Pocket</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- OAuth client ID for authentication -->
    <string name="oauth_client_id">105461357089-9t965h34lehltbo2kob0ljpabt1g4g68.apps.googleusercontent.com</string>

    <!-- Input Hint Strings -->
    <string name="hint_search">Search Title or Author</string>
    <string name="hint_title_input">Title</string>
    <string name="hint_subtitle_input">Subtitle</string>
    <string name="hint_author_input">Author</string>
    <string name="hint_num_pages_input">Pages</string>
    <string name="hint_date_started_input">Date Started</string>
    <string name="hint_date_completed_input">Date completed</string>
    <string name="hint_description">Description</string>
    <string name="hint_notes">Notes</string>

    <!-- Label Strings -->
    <string name="label_Title">Title</string>
    <string name="label_Subtitle">Subtitle</string>
    <string name="label_Author">Author</string>
    <string name="label_Num_Pages">Number Of Pages</string>
    <string name="label_publisher">Publisher</string>
    <string name="label_date_published">Date Published</string>
    <string name="label_isbn">ISBN</string>
    <string name="label_Date_Started">Date Started</string>
    <string name="label_Date_Completed">Date Completed</string>
    <string name="label_description">Description</string>
    <string name="label_notes">Notes</string>
    <string name="label_save_button">Save</string>
    <string name="label_cancel_button">Cancel</string>
    <string name="label_date">Date</string>

</resources>
