<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.awchoudhary.bookpocket.CreateBookActivity"
    tools:showIn="@layout/activity_create_book">

    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.awchoudhary.bookpocket.CreateBookActivity"
        tools:showIn="@layout/activity_create_book">


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="92%"
            app:layout_widthPercent="100%" >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/coverImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/default_cover_image_big"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:background="@color/colorAccent" />

                <TextView android:id="@+id/titleLabel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/label_input_spacing"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_Title"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:padding="@dimen/input_padding"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:inputType="text" />

                <TextView android:id="@+id/subtitleLabel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/label_input_spacing"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_Subtitle"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/subtitleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:padding="@dimen/input_padding"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:inputType="text" />

                <TextView android:id="@+id/authorLabel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/label_input_spacing"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_Author"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/authorInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:padding="@dimen/input_padding"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:inputType="text" />

                <TextView android:id="@+id/numPagesLabel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/label_input_spacing"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_Num_Pages"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/numPagesInput"
                    android:layout_width="wrap_content"
                    android:minWidth="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:padding="@dimen/input_padding"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:inputType="number" />

                <TextView android:id="@+id/dateStartedLabel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/label_input_spacing"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_Date_Started"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/dateStartedInput"
                    android:layout_width="wrap_content"
                    android:minWidth="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:padding="@dimen/input_padding"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:inputType="date"
                    android:focusable="false" />

                <TextView android:id="@+id/dateCompletedLabel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/label_input_spacing"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_Date_Completed"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/dateCompletedInput"
                    android:layout_width="wrap_content"
                    android:minWidth="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:padding="@dimen/input_padding"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:inputType="date"
                    android:focusable="false" />

                <TextView android:id="@+id/descriptionLabel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/label_input_spacing"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_description"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/descriptionInput"
                    android:inputType="textMultiLine"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:background="@drawable/input_background"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:padding="@dimen/input_padding"
                    android:minLines="5"/>

                <TextView android:id="@+id/notesLabel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/label_input_spacing"
                    android:textColor="@color/colorAccent"
                    android:text="@string/label_notes"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/notesInput"
                    android:inputType="textMultiLine"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:background="@drawable/input_background"
                    android:layout_marginBottom="@dimen/input_spacing"
                    android:padding="@dimen/input_padding"
                    android:minLines="5"/>

            </LinearLayout>

        </ScrollView>

        <!-- - - - - - - - - - - - - - - - - - - - - - - - - Bottom toolbar - - - - - - - - - - - - - - - - - - - - - - - - -->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_heightPercent="8%"
            app:layout_widthPercent="100%"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true">

            <Button android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/add_button_background"
                android:textColor="@color/colorPrimary"
                android:text="@string/label_save_button"
                android:textSize="18sp"/> <!-- TODO: make text size size responsive across devices -->


        </LinearLayout>

    </android.support.percent.PercentRelativeLayout>

</RelativeLayout>